# src/Web.Ui/swagger.json
@@ -1697,19 +1697,19 @@
           }
         }
       },
-      "post": {
+      "put": {
         "tags": [
           "PayrollRecord"
         ],
-        "summary": "CreatePayrollRecord",
-        "operationId": "CreatePayrollRecord",
+        "summary": "SavePayrollRecord",
+        "operationId": "SavePayrollRecord",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/CreatePayrollRecordRequest"
+                    "$ref": "#/components/schemas/SavePayrollRecordRequest"
                   }
                 ]
               }
@@ -1718,7 +1718,7 @@
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/CreatePayrollRecordRequest"
+                    "$ref": "#/components/schemas/SavePayrollRecordRequest"
                   }
                 ]
               }
@@ -1727,7 +1727,7 @@
               "schema": {
                 "allOf": [
                   {
-                    "$ref": "#/components/schemas/CreatePayrollRecordRequest"
+                    "$ref": "#/components/schemas/SavePayrollRecordRequest"
                   }
                 ]
               }
@@ -1740,17 +1740,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreatePayrollRecordCommandResponseResult"
+                  "$ref": "#/components/schemas/SavePayrollRecordCommandResponseResult"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreatePayrollRecordCommandResponseResult"
+                  "$ref": "#/components/schemas/SavePayrollRecordCommandResponseResult"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreatePayrollRecordCommandResponseResult"
+                  "$ref": "#/components/schemas/SavePayrollRecordCommandResponseResult"
                 }
               }
             }
@@ -1843,77 +1843,6 @@
       }
     },
     "/api/v1/payroll-records/{payrollRecordId}": {
-      "put": {
-        "tags": [
-          "PayrollRecord"
-        ],
-        "summary": "UpdatePayrollRecord",
-        "operationId": "UpdatePayrollRecord",
-        "parameters": [
-          {
-            "name": "payrollRecordId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "allOf": [
-                  {
-                    "$ref": "#/components/schemas/UpdatePayrollRecordRequest"
-                  }
-                ]
-              }
-            },
-            "text/json": {
-              "schema": {
-                "allOf": [
-                  {
-                    "$ref": "#/components/schemas/UpdatePayrollRecordRequest"
-                  }
-                ]
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "allOf": [
-                  {
-                    "$ref": "#/components/schemas/UpdatePayrollRecordRequest"
-                  }
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/BooleanResult"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BooleanResult"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BooleanResult"
-                }
-              }
-            }
-          }
-        }
-      },
       "delete": {
         "tags": [
           "PayrollRecord"
@@ -3100,86 +3029,6 @@
           },
           "effectiveFrom": {
             "type": "string"
-          }
-        }
-      },
-      "CreatePayrollRecordCommandResponse": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "payrollRecordId": {
-            "type": "string",
-            "format": "uuid"
-          }
-        }
-      },
-      "CreatePayrollRecordCommandResponseResult": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "isSuccess": {
-            "type": "boolean"
-          },
-          "badResultType": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true,
-            "x-enumNames": [
-              "NotFound",
-              "Validation",
-              "General",
-              "Unauthorized"
-            ],
-            "enum": [
-              0,
-              1,
-              2,
-              3
-            ]
-          },
-          "response": {
-            "nullable": true,
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/CreatePayrollRecordCommandResponse"
-              }
-            ]
-          },
-          "errors": {
-            "type": "object",
-            "nullable": true,
-            "additionalProperties": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          }
-        }
-      },
-      "CreatePayrollRecordRequest": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "employeeId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "persianYear": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "persianMonth": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "work": {
-            "nullable": true,
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserWorkInputDto"
-              }
-            ]
           }
         }
       },
@@ -5868,32 +5717,6 @@
           }
         }
       },
-      "UpdatePayrollRecordRequest": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "employeeId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "persianYear": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "persianMonth": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "work": {
-            "nullable": true,
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserWorkInputDto"
-              }
-            ]
-          }
-        }
-      },
       "UpdateSalaryDecreeRequest": {
         "type": "object",
         "additionalProperties": false,
@@ -6053,74 +5876,6 @@
           }
         }
       },
-      "PayrollCalculationRuleValueResponse": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "key": {
-            "type": "integer",
-            "format": "int32",
-            "x-enumNames": [
-              "MinimumDailySalary",
-              "DailyWorkingHours",
-              "MaximumOvertimeHoursPerDay",
-              "MaximumNightShiftHoursPerDay",
-              "MaximumOvertimeHoursPerMonth",
-              "MaximumFridayWorkHoursPerMonth",
-              "InsurancePercentage",
-              "AnnualBonusMinimumAmount",
-              "AnnualBonusMaximumAmount",
-              "TaxExemptMonthlyAmount",
-              "TaxRatePercentage",
-              "StandardDailyWorkHours",
-              "NightShiftPercentage",
-              "HolidayWorkPercentage",
-              "OvertimePercentage",
-              "FridayWorkPercentage",
-              "ChildAllowanceMultiplier",
-              "EndOfServiceDaysPerYear",
-              "HousingAllowanceAmount",
-              "FoodAllowanceAmount",
-              "MarriageAllowanceAmount",
-              "ShiftWorkPercentageMorningEvening",
-              "ShiftWorkPercentageMorningNight",
-              "ShiftWorkPercentageEveningNight",
-              "ShiftWorkPercentageMorningEveningNight"
-            ],
-            "enum": [
-              0,
-              1,
-              2,
-              3,
-              4,
-              5,
-              6,
-              7,
-              8,
-              9,
-              10,
-              11,
-              12,
-              13,
-              14,
-              15,
-              16,
-              17,
-              18,
-              19,
-              20,
-              21,
-              22,
-              23,
-              24
-            ]
-          },
-          "value": {
-            "type": "number",
-            "format": "decimal"
-          }
-        }
-      },
       "GetPayrollRecordCalculationDetailsResponse": {
         "type": "object",
         "additionalProperties": false,
@@ -6256,14 +6011,6 @@
           "isEsfandPeriod": {
             "type": "boolean"
           },
-          "previousAnnualWorkedDaysCount": {
-            "type": "number",
-            "format": "decimal"
-          },
-          "annualWorkedDaysCount": {
-            "type": "number",
-            "format": "decimal"
-          },
           "maxMonthlyOvertimeHours": {
             "type": "number",
             "format": "decimal"
@@ -6358,13 +6105,6 @@
           "isTaxSubject": {
             "type": "boolean"
           },
-          "ruleValues": {
-            "type": "array",
-            "nullable": true,
-            "items": {
-              "$ref": "#/components/schemas/PayrollCalculationRuleValueResponse"
-            }
-          },
           "calculatedAmounts": {
             "nullable": true,
             "allOf": [
@@ -6412,6 +6152,86 @@
             "allOf": [
               {
                 "$ref": "#/components/schemas/GetPayrollRecordCalculationDetailsResponse"
+              }
+            ]
+          },
+          "errors": {
+            "type": "object",
+            "nullable": true,
+            "additionalProperties": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      },
+      "SavePayrollRecordRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "employeeId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "persianYear": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "persianMonth": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "work": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/UserWorkInputDto"
+              }
+            ]
+          }
+        }
+      },
+      "SavePayrollRecordCommandResponse": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "payrollRecordId": {
+            "type": "string",
+            "format": "uuid"
+          }
+        }
+      },
+      "SavePayrollRecordCommandResponseResult": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "isSuccess": {
+            "type": "boolean"
+          },
+          "badResultType": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true,
+            "x-enumNames": [
+              "NotFound",
+              "Validation",
+              "General",
+              "Unauthorized"
+            ],
+            "enum": [
+              0,
+              1,
+              2,
+              3
+            ]
+          },
+          "response": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/SavePayrollRecordCommandResponse"
               }
             ]
           },
